--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = 4ad584611
-	trim = 
-	trimbase = 
+	base = d37faf09d
+	trim = ament_xmllint
+	trimbase = 4ad584611
