--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = 0c0da4c60
-	trim = 
-	trimbase = 
+	base = 18df94441
+	trim = ament_uncrustify
+	trimbase = 0c0da4c60
