--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = eb31354c3
-	trim = 
-	trimbase = 
+	base = cc7c009e4
+	trim = ament_pycodestyle
+	trimbase = eb31354c3
