--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = 0c0da4c60
-	trim = 
-	trimbase = 
+	base = 39729e5d4
+	trim = ament_pyflakes
+	trimbase = 0c0da4c60
