--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = 28b771b7d
-	trim = 
-	trimbase = 
+	base = 714ab725c
+	trim = ament_pep257
+	trimbase = 28b771b7d
