--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = 22ad1ea3f
-	trim = 
-	trimbase = 
+	base = 8babdd554
+	trim = ament_pclint
+	trimbase = 22ad1ea3f
