--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = e5d5c1693
-	trim = 
-	trimbase = 
+	base = 7ee9705cb
+	trim = ament_mypy
+	trimbase = e5d5c1693
