--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = a5fe796c5
-	trim = 
-	trimbase = 
+	base = 0be8e4c57
+	trim = ament_lint_common
+	trimbase = a5fe796c5
