--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = f7108ba44
-	trim = 
-	trimbase = 
+	base = 4d67eeed0
+	trim = ament_lint_auto
+	trimbase = f7108ba44
