--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = 482bba392
-	trim = 
-	trimbase = 
+	base = 679f9e02a
+	trim = ament_lint
+	trimbase = 482bba392
