--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = 230d7a9ba
-	trim = 
-	trimbase = 
+	base = 0f81b2378
+	trim = ament_flake8
+	trimbase = 230d7a9ba
