--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = 63941f062
-	trim = 
-	trimbase = 
+	base = 3b001fa33
+	trim = ament_cpplint
+	trimbase = 63941f062
