--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = d2fff0189
-	trim = 
-	trimbase = 
+	base = 4d68cff08
+	trim = ament_copyright
+	trimbase = d2fff0189
