--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = 974e30786
-	trim = 
-	trimbase = 
+	base = 639370cac
+	trim = ament_cmake_uncrustify
+	trimbase = 974e30786
