--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = 26980c18a
-	trim = 
-	trimbase = 
+	base = 9035b1305
+	trim = ament_cmake_xmllint
+	trimbase = 26980c18a
