--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = 3d267f6c1
-	trim = 
-	trimbase = 
+	base = 29007a1cf
+	trim = ament_cmake_pyflakes
+	trimbase = 3d267f6c1
