--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = 39e49dd3b
-	trim = 
-	trimbase = 
+	base = 3f4a12769
+	trim = ament_cmake_pycodestyle
+	trimbase = 39e49dd3b
