--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = a0f1ce3ff
-	trim = 
-	trimbase = 
+	base = 4b496290e
+	trim = ament_cmake_pep257
+	trimbase = a0f1ce3ff
