--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = d39126e01
-	trim = 
-	trimbase = 
+	base = f5299fdb4
+	trim = ament_cmake_mypy
+	trimbase = d39126e01
