--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = 0d09f958a
-	trim = 
-	trimbase = 
+	base = 46f2325d8
+	trim = ament_cmake_lint_cmake
+	trimbase = 0d09f958a
