--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = 27fb12d66
-	trim = 
-	trimbase = 
+	base = a8a5ed6ea
+	trim = ament_cmake_flake8
+	trimbase = 27fb12d66
