--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = 995320547
-	trim = 
-	trimbase = 
+	base = a38438d70
+	trim = ament_cmake_cpplint
+	trimbase = 995320547
