--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = 7b26c06b0
-	trim = 
-	trimbase = 
+	base = c4cd83bf3
+	trim = ament_cmake_cppcheck
+	trimbase = 7b26c06b0
