--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = ed331b2f6
-	trim = 
-	trimbase = 
+	base = f9293f654
+	trim = ament_cmake_copyright
+	trimbase = ed331b2f6
