--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = ed331b2f6
-	trim = 
-	trimbase = 
+	base = 40e594de8
+	trim = ament_cmake_clang_tidy
+	trimbase = ed331b2f6
