--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = 0d161bfd4
-	trim = 
-	trimbase = 
+	base = 5fa7b4c6d
+	trim = ament_clang_tidy
+	trimbase = 0d161bfd4
