--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = 8441ecfd5
-	trim = 
-	trimbase = 
+	base = 1cb49ff95
+	trim = ament_cmake_clang_format
+	trimbase = 8441ecfd5
