--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd3322806
-	base = 0ee421688
-	trim = 
-	trimbase = 
+	base = f01f2282e
+	trim = ament_clang_format
+	trimbase = 0ee421688
