--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_xmllint
-	previous = 
-	base = f27cb3c04
+	previous = f27cb3c04
+	base = fe736edd0
 	trim = 
 	trimbase = 
