--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_pclint
-	previous = 
-	base = 1be624317
+	previous = 1be624317
+	base = 14861d122
 	trim = 
 	trimbase = 
