--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_pclint
-	previous = 
-	base = f11daddcc
+	previous = f11daddcc
+	base = 52e95015f
 	trim = 
 	trimbase = 
