--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_pep257
-	previous = 
-	base = 24dddb37d
+	previous = 24dddb37d
+	base = a7846a414
 	trim = 
 	trimbase = 
