--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_copyright
-	previous = 
-	base = 4d68cff08
+	previous = 4d68cff08
+	base = 433a91f31
 	trim = 
 	trimbase = 
