--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_copyright
-	previous = 
-	base = 5cb620ecd
+	previous = 5cb620ecd
+	base = fb81f0409
 	trim = 
 	trimbase = 
