--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_cpplint
-	previous = 
-	base = 7c02de659
+	previous = 7c02de659
+	base = 77cfe8a05
 	trim = 
 	trimbase = 
