--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cppcheck
-	previous = 
-	base = 3e9effdca
+	previous = 3e9effdca
+	base = c8ddd8191
 	trim = 
 	trimbase = 
