--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cppcheck
-	previous = 
-	base = 078c5ae9a
+	previous = 078c5ae9a
+	base = e4452d5bd
 	trim = 
 	trimbase = 
