--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_clang_tidy
-	previous = 
-	base = 8b8962254
+	previous = 8b8962254
+	base = 876c053fc
 	trim = 
 	trimbase = 
