--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_uncrustify
-	previous = 
-	base = 5e0f93049
+	previous = 5e0f93049
+	base = 9cfa9c0f2
 	trim = 
 	trimbase = 
