--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_uncrustify
-	previous = 
-	base = 639370cac
+	previous = 639370cac
+	base = b66c2f5d9
 	trim = 
 	trimbase = 
