--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_uncrustify
-	previous = 
-	base = c554bef6e
+	previous = c554bef6e
+	base = 4e8591da3
 	trim = 
 	trimbase = 
