--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_xmllint
-	previous = 
-	base = 9035b1305
+	previous = 9035b1305
+	base = 77cbf1899
 	trim = 
 	trimbase = 
