--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_xmllint
-	previous = 
-	base = 8408c5750
+	previous = 8408c5750
+	base = 6d4c0b8ab
 	trim = 
 	trimbase = 
