--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_clang_format
-	previous = 
-	base = 1cb49ff95
+	previous = 1cb49ff95
+	base = 5263b23d5
 	trim = 
 	trimbase = 
