--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_clang_format
-	previous = 
-	base = e88258970
+	previous = e88258970
+	base = aa74b5e3f
 	trim = 
 	trimbase = 
