--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_pyflakes
-	previous = 
-	base = 29007a1cf
+	previous = 29007a1cf
+	base = 9bb446e73
 	trim = 
 	trimbase = 
