--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_pyflakes
-	previous = 
-	base = 4056fa031
+	previous = 4056fa031
+	base = 51104729f
 	trim = 
 	trimbase = 
