--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_pep257
-	previous = 
-	base = 246f4874f
+	previous = 246f4874f
+	base = 6095466e1
 	trim = 
 	trimbase = 
