--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_pycodestyle
-	previous = 
-	base = 3f4a12769
+	previous = 3f4a12769
+	base = 3eb020509
 	trim = 
 	trimbase = 
