--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_pycodestyle
-	previous = 
-	base = 6fa39d47d
+	previous = 6fa39d47d
+	base = 849e156ee
 	trim = 
 	trimbase = 
