--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_clang_tidy
-	previous = 
-	base = 5fa7b4c6d
+	previous = 5fa7b4c6d
+	base = 73abf9330
 	trim = 
 	trimbase = 
