--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_clang_tidy
-	previous = 
-	base = 95db4e743
+	previous = 95db4e743
+	base = dce56026e
 	trim = 
 	trimbase = 
