--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_lint
-	previous = 
-	base = 4d5f238be
+	previous = 4d5f238be
+	base = eb7c25fa4
 	trim = 
 	trimbase = 
