--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_copyright
-	previous = 
-	base = f9293f654
+	previous = f9293f654
+	base = ad9b84361
 	trim = 
 	trimbase = 
