--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_copyright
-	previous = 
-	base = c095afe31
+	previous = c095afe31
+	base = 377c8a909
 	trim = 
 	trimbase = 
