--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_pyflakes
-	previous = 
-	base = 7d1f7dca0
+	previous = 7d1f7dca0
+	base = bf3337746
 	trim = 
 	trimbase = 
