--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_mypy
-	previous = 
-	base = f5299fdb4
+	previous = f5299fdb4
+	base = 7f7d8f27e
 	trim = 
 	trimbase = 
