--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_mypy
-	previous = 
-	base = c6cc4e02d
+	previous = c6cc4e02d
+	base = 7b7639dd6
 	trim = 
 	trimbase = 
