--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_pclint
-	previous = 
-	base = 8babdd554
+	previous = 8babdd554
+	base = 5efc0d109
 	trim = 
 	trimbase = 
