--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_pclint
-	previous = 
-	base = 3a217acd0
+	previous = 3a217acd0
+	base = 4adcae42c
 	trim = 
 	trimbase = 
