--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_flake8
-	previous = 
-	base = 0f81b2378
+	previous = 0f81b2378
+	base = b31b1ba87
 	trim = 
 	trimbase = 
