--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_flake8
-	previous = 
-	base = 4d1289e32
+	previous = 4d1289e32
+	base = 6d924afc8
 	trim = 
 	trimbase = 
