--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_flake8
-	previous = 
-	base = 7baaeda71
+	previous = 7baaeda71
+	base = 4211a04bb
 	trim = 
 	trimbase = 
