--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_lint_cmake
-	previous = 
-	base = 6f02bde85
+	previous = 6f02bde85
+	base = 2b5290a60
 	trim = 
 	trimbase = 
