--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_lint_cmake
-	previous = 
-	base = 53d56afc1
+	previous = 53d56afc1
+	base = b97495f2f
 	trim = 
 	trimbase = 
