--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_lint_cmake
-	previous = 
-	base = 46f2325d8
+	previous = 46f2325d8
+	base = b2b496507
 	trim = 
 	trimbase = 
