--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_lint_auto
-	previous = 
-	base = e6ab841c3
+	previous = e6ab841c3
+	base = 7749e247c
 	trim = 
 	trimbase = 
