--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_mypy
-	previous = 
-	base = c3615535f
+	previous = c3615535f
+	base = bbd4828d5
 	trim = 
 	trimbase = 
