--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_lint_common
-	previous = 
-	base = 0be8e4c57
+	previous = 0be8e4c57
+	base = cdb4b49e5
 	trim = 
 	trimbase = 
