--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_lint_common
-	previous = 
-	base = 23a129968
+	previous = 23a129968
+	base = 869c76c81
 	trim = 
 	trimbase = 
