--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cpplint
-	previous = 
-	base = 3b001fa33
+	previous = 3b001fa33
+	base = f89808542
 	trim = 
 	trimbase = 
