--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cpplint
-	previous = 
-	base = 5400ddb93
+	previous = 5400ddb93
+	base = 979303b77
 	trim = 
 	trimbase = 
