--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_clang_format
-	previous = 
-	base = f01f2282e
+	previous = f01f2282e
+	base = cc7125593
 	trim = 
 	trimbase = 
