--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_clang_format
-	previous = 
-	base = 2e0eeda4f
+	previous = 2e0eeda4f
+	base = 0bccf292f
 	trim = 
 	trimbase = 
