--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_pycodestyle
-	previous = 
-	base = d1eed3d57
+	previous = d1eed3d57
+	base = e7c56086a
 	trim = 
 	trimbase = 
