--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_uncrustify
-	previous = 
-	base = 3274395d0
+	previous = 3274395d0
+	base = 29adc1f19
 	trim = 
 	trimbase = 
