--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cpplint
-	previous = 
-	base = 2c80022a6
+	previous = 2c80022a6
+	base = b3de3b456
 	trim = 
 	trimbase = 
