--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_pclint
-	previous = 
-	base = 9084541d7
+	previous = 9084541d7
+	base = db5a4169f
 	trim = 
 	trimbase = 
