--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_lint
-	previous = 
-	base = 4d4f72551
+	previous = 4d4f72551
+	base = 46e3a9816
 	trim = 
 	trimbase = 
