--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cppcheck
-	previous = 
-	base = d1c81c71c
+	previous = d1c81c71c
+	base = 18f0bf1d5
 	trim = 
 	trimbase = 
