--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_pclint
-	previous = 
-	base = ef2253da1
+	previous = ef2253da1
+	base = 8ea0d83af
 	trim = 
 	trimbase = 
