--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_pyflakes
-	previous = 
-	base = cf4b21aab
+	previous = cf4b21aab
+	base = 14b0dd298
 	trim = 
 	trimbase = 
