--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_clang_tidy
-	previous = 
-	base = 3c85f085f
+	previous = 3c85f085f
+	base = 91abb4040
 	trim = 
 	trimbase = 
