--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_lint_cmake
-	previous = 
-	base = bdc64d2a1
+	previous = bdc64d2a1
+	base = ad564feff
 	trim = 
 	trimbase = 
