--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_mypy
-	previous = 
-	base = 0edd9d2f5
+	previous = 0edd9d2f5
+	base = 6955db171
 	trim = 
 	trimbase = 
