--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_pep257
-	previous = 
-	base = 33dec39d2
+	previous = 33dec39d2
+	base = 38886e371
 	trim = 
 	trimbase = 
