--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_clang_format
-	previous = 
-	base = be30f0077
+	previous = be30f0077
+	base = a439e5776
 	trim = 
 	trimbase = 
