--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_pyflakes
-	previous = 
-	base = e397e93fd
+	previous = e397e93fd
+	base = 77faa0222
 	trim = 
 	trimbase = 
