--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_mypy
-	previous = 
-	base = 769336b03
+	previous = 769336b03
+	base = 4dec0febb
 	trim = 
 	trimbase = 
