--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_cpplint
-	previous = 
-	base = 4febb7915
+	previous = 4febb7915
+	base = 4827c08a1
 	trim = 
 	trimbase = 
