--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_copyright
-	previous = 
-	base = ac3ca8978
+	previous = ac3ca8978
+	base = 422b2513e
 	trim = 
 	trimbase = 
