--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_cppcheck
-	previous = 
-	base = ea914a48d
+	previous = ea914a48d
+	base = 545cc252c
 	trim = 
 	trimbase = 
