--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_lint_auto
-	previous = 
-	base = 8af47fea9
+	previous = 8af47fea9
+	base = 0ace36d30
 	trim = 
 	trimbase = 
