--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_lint_cmake
-	previous = 
-	base = af75ed7ed
+	previous = af75ed7ed
+	base = 5d8b12474
 	trim = 
 	trimbase = 
