--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_xmllint
-	previous = 
-	base = bcc459531
+	previous = bcc459531
+	base = 0661af00e
 	trim = 
 	trimbase = 
