--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_flake8
-	previous = 
-	base = 4a388e0ec
+	previous = 4a388e0ec
+	base = 9d3ccad89
 	trim = 
 	trimbase = 
