--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_copyright
-	previous = 
-	base = 9c85308ad
+	previous = 9c85308ad
+	base = 02bc72d91
 	trim = 
 	trimbase = 
