--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_uncrustify
-	previous = 
-	base = 4174005c6
+	previous = 4174005c6
+	base = 95e665856
 	trim = 
 	trimbase = 
