--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_clang_tidy
-	previous = 
-	base = 6142eceb2
+	previous = 6142eceb2
+	base = 569c0abde
 	trim = 
 	trimbase = 
