--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_pycodestyle
-	previous = 
-	base = 414283b82
+	previous = 414283b82
+	base = a97dab08c
 	trim = 
 	trimbase = 
