--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_flake8
-	previous = 
-	base = 8ba0e3fdf
+	previous = 8ba0e3fdf
+	base = cfb389331
 	trim = 
 	trimbase = 
