--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_xmllint
-	previous = 
-	base = 20f79739a
+	previous = 20f79739a
+	base = ef9a26e0f
 	trim = 
 	trimbase = 
