--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_cmake_pycodestyle
-	previous = 
-	base = 1be428950
+	previous = 1be428950
+	base = b2529d7a2
 	trim = 
 	trimbase = 
