--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_lint_common
-	previous = 
-	base = 34f462de5
+	previous = 34f462de5
+	base = 2679ed185
 	trim = 
 	trimbase = 
