--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_xmllint
-	previous = 
-	base = 576af11ce
+	previous = 576af11ce
+	base = cfddfc8b8
 	trim = 
 	trimbase = 
