--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_xmllint
-	previous = 
-	base = d37faf09d
+	previous = d37faf09d
+	base = dd1b5dbcb
 	trim = 
 	trimbase = 
