--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_cmake_pycodestyle
-	previous = 
-	base = 24ac6a5c7
+	previous = 24ac6a5c7
+	base = 0e1321728
 	trim = 
 	trimbase = 
