--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_copyright
-	previous = 
-	base = 6a9457aca
+	previous = 6a9457aca
+	base = 24b29470d
 	trim = 
 	trimbase = 
