--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_clang_tidy
-	previous = 
-	base = e7c409635
+	previous = e7c409635
+	base = 61d186d76
 	trim = 
 	trimbase = 
