--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_pclint
-	previous = 
-	base = e501b9db3
+	previous = e501b9db3
+	base = 1591815f8
 	trim = 
 	trimbase = 
