--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_uncrustify
-	previous = 
-	base = 18df94441
+	previous = 18df94441
+	base = bb7863b34
 	trim = 
 	trimbase = 
