--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_uncrustify
-	previous = 
-	base = f25915ffb
+	previous = f25915ffb
+	base = 486f2bb59
 	trim = 
 	trimbase = 
