--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_cmake_pyflakes
-	previous = 
-	base = 16a8674f3
+	previous = 16a8674f3
+	base = 27da66145
 	trim = 
 	trimbase = 
