--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_cppcheck
-	previous = 
-	base = 43fbe1967
+	previous = 43fbe1967
+	base = 81f91b604
 	trim = 
 	trimbase = 
