--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_clang_format
-	previous = 
-	base = 7a917ce20
+	previous = 7a917ce20
+	base = 31232621e
 	trim = 
 	trimbase = 
