--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_pyflakes
-	previous = 
-	base = 39729e5d4
+	previous = 39729e5d4
+	base = a4e65bd89
 	trim = 
 	trimbase = 
