--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_pyflakes
-	previous = 
-	base = 39c660921
+	previous = 39c660921
+	base = 4ca7b6930
 	trim = 
 	trimbase = 
