--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_lint_common
-	previous = 
-	base = ebf666db8
+	previous = ebf666db8
+	base = 4bf88ba37
 	trim = 
 	trimbase = 
