--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_pep257
-	previous = 
-	base = 4b496290e
+	previous = 4b496290e
+	base = 818f50ca3
 	trim = 
 	trimbase = 
