--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_cmake_pep257
-	previous = 
-	base = b86dbf4c3
+	previous = b86dbf4c3
+	base = 44cabdace
 	trim = 
 	trimbase = 
