--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_cmake_pclint
-	previous = 
-	base = e40283bc5
+	previous = e40283bc5
+	base = 4ff7b54c9
 	trim = 
 	trimbase = 
