--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_cpplint
-	previous = 
-	base = 6176f4879
+	previous = 6176f4879
+	base = 00ba822b4
 	trim = 
 	trimbase = 
