--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_pycodestyle
-	previous = 
-	base = 76fb67d32
+	previous = 76fb67d32
+	base = 6fd4ca878
 	trim = 
 	trimbase = 
