--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_pycodestyle
-	previous = 
-	base = cc7c009e4
+	previous = cc7c009e4
+	base = 3c9748b52
 	trim = 
 	trimbase = 
