--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_cmake_cpplint
-	previous = 
-	base = 01159d5ac
+	previous = 01159d5ac
+	base = f17a34ac8
 	trim = 
 	trimbase = 
