--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_cpplint
-	previous = 
-	base = a38438d70
+	previous = a38438d70
+	base = a6f92d28b
 	trim = 
 	trimbase = 
