--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_pep257
-	previous = 
-	base = 714ab725c
+	previous = 714ab725c
+	base = 92228f616
 	trim = 
 	trimbase = 
