--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_pep257
-	previous = 
-	base = 5863855ab
+	previous = 5863855ab
+	base = 3b93099d5
 	trim = 
 	trimbase = 
