--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_cmake_lint_cmake
-	previous = 
-	base = abb7da472
+	previous = abb7da472
+	base = 33540076f
 	trim = 
 	trimbase = 
