--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_lint
-	previous = 
-	base = 679f9e02a
+	previous = 679f9e02a
+	base = c00b0cae5
 	trim = 
 	trimbase = 
