--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_flake8
-	previous = 
-	base = a8a5ed6ea
+	previous = a8a5ed6ea
+	base = c135fd5ae
 	trim = 
 	trimbase = 
