--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_lint
-	previous = 
-	base = ebe41dbec
+	previous = ebe41dbec
+	base = 959e66048
 	trim = 
 	trimbase = 
