--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_cmake_flake8
-	previous = 
-	base = e3f0e7189
+	previous = e3f0e7189
+	base = 7b4c8c267
 	trim = 
 	trimbase = 
