--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_cmake_clang_format
-	previous = 
-	base = 29abb02a5
+	previous = 29abb02a5
+	base = 8b0894886
 	trim = 
 	trimbase = 
