--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_flake8
-	previous = 
-	base = a7fe7dbe1
+	previous = a7fe7dbe1
+	base = 91cc7dc51
 	trim = 
 	trimbase = 
