--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_cmake_xmllint
-	previous = 
-	base = 364621c24
+	previous = 364621c24
+	base = f48db8a91
 	trim = 
 	trimbase = 
