--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_lint_auto
-	previous = 
-	base = 4d67eeed0
+	previous = 4d67eeed0
+	base = 35e4fab7b
 	trim = 
 	trimbase = 
