--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_lint_auto
-	previous = 
-	base = a8b772ed2
+	previous = a8b772ed2
+	base = 0d12e2e2d
 	trim = 
 	trimbase = 
