--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_clang_tidy
-	previous = 
-	base = 40e594de8
+	previous = 40e594de8
+	base = f1ba3bbef
 	trim = 
 	trimbase = 
