--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_cmake_clang_tidy
-	previous = 
-	base = 498b0b1a7
+	previous = 498b0b1a7
+	base = 4645a5d99
 	trim = 
 	trimbase = 
