--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_lint_cmake
-	previous = 
-	base = 4e4651499
+	previous = 4e4651499
+	base = 085fe9cc1
 	trim = 
 	trimbase = 
