--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_lint_cmake
-	previous = 
-	base = a5b242fc4
+	previous = a5b242fc4
+	base = a0f09668b
 	trim = 
 	trimbase = 
