--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_cmake_uncrustify
-	previous = 
-	base = 517f6955b
+	previous = 517f6955b
+	base = 0e49ce9a6
 	trim = 
 	trimbase = 
