--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_cmake_copyright
-	previous = 
-	base = 0345de52b
+	previous = 0345de52b
+	base = d1a143ac2
 	trim = 
 	trimbase = 
