--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_mypy
-	previous = 
-	base = 63b0ca64c
+	previous = 63b0ca64c
+	base = b88c55c62
 	trim = 
 	trimbase = 
