--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_mypy
-	previous = 
-	base = 7ee9705cb
+	previous = 7ee9705cb
+	base = ce1232df7
 	trim = 
 	trimbase = 
