--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_cppcheck
-	previous = 
-	base = c4cd83bf3
+	previous = c4cd83bf3
+	base = 2f25213c5
 	trim = 
 	trimbase = 
