--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_cmake_cppcheck
-	previous = 
-	base = a5a3cf0cb
+	previous = a5a3cf0cb
+	base = 08b27d762
 	trim = 
 	trimbase = 
