--- a/tracks.yaml
+++ b/tracks.yaml
@@ -247,5 +247,4 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/ament/ament_lint.git
-    version: 0.11.4
-    version_saved: :{auto}
+    version: :{auto}
