--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = b07ce9d25
+	base = c1612e212
 	trim = ament_flake8
-	trimbase = 
+	trimbase = b07ce9d25
