--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = 3e7dca8e2
+	base = b88c09d62
 	trim = ament_clang_tidy
-	trimbase = 
+	trimbase = 3e7dca8e2
