--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = 4ff3cd453
+	base = 9dffc95af
 	trim = ament_cmake_pep257
-	trimbase = 
+	trimbase = 4ff3cd453
