--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = 20d9bb1f2
+	base = 38e06f69b
 	trim = ament_cmake_clang_tidy
-	trimbase = 
+	trimbase = 20d9bb1f2
