--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = 93977dafb
+	base = a40057d0b
 	trim = ament_lint_common
-	trimbase = 
+	trimbase = 93977dafb
