--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = 44c73881e
+	base = 9fc2155c7
 	trim = ament_xmllint
-	trimbase = 
+	trimbase = 44c73881e
