--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = b0b13597e
+	base = 43744d66f
 	trim = ament_lint_cmake
-	trimbase = 
+	trimbase = b0b13597e
