--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = 4463b002c
+	base = b84494721
 	trim = ament_copyright
-	trimbase = 
+	trimbase = 4463b002c
