--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = 64872f037
+	base = 8c1f2deeb
 	trim = ament_lint
-	trimbase = 
+	trimbase = 64872f037
