--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = 31efd0946
+	base = edf38f5bf
 	trim = ament_cmake_cppcheck
-	trimbase = 
+	trimbase = 31efd0946
