--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = 5961bf5c7
+	base = cf0ed4b7a
 	trim = ament_cmake_pycodestyle
-	trimbase = 
+	trimbase = 5961bf5c7
