--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = beca5c4d5
+	base = 493115418
 	trim = ament_cmake_clang_format
-	trimbase = 
+	trimbase = beca5c4d5
