--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = 0a1d92f74
+	base = a4a9f81a3
 	trim = ament_pclint
-	trimbase = 
+	trimbase = 0a1d92f74
