--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = 59882060d
+	base = 9a84b534e
 	trim = ament_cmake_uncrustify
-	trimbase = 
+	trimbase = 59882060d
