--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = 44f0b11f9
+	base = 3ce3b97b1
 	trim = ament_cmake_pyflakes
-	trimbase = 
+	trimbase = 44f0b11f9
