--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = 4d40a02de
+	base = ddfeceee1
 	trim = ament_cmake_flake8
-	trimbase = 
+	trimbase = 4d40a02de
