--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = 5370531bf
+	base = 4ec2eb875
 	trim = ament_pyflakes
-	trimbase = 
+	trimbase = 5370531bf
