--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = fc0299713
+	base = dd747adb6
 	trim = ament_mypy
-	trimbase = 
+	trimbase = fc0299713
