--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = 84574cd93
+	base = afdceec71
 	trim = ament_pycodestyle
-	trimbase = 
+	trimbase = 84574cd93
