--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = 033568f31
+	base = 6ec549716
 	trim = ament_cppcheck
-	trimbase = 
+	trimbase = 033568f31
