--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = 7f07908b6
+	base = f1b6eeae9
 	trim = ament_cmake_mypy
-	trimbase = 
+	trimbase = 7f07908b6
