--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = 36321ab29
+	base = d168a3c7d
 	trim = ament_clang_format
-	trimbase = 
+	trimbase = 36321ab29
