--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = b448ae8a2
+	base = 6538524f5
 	trim = ament_pep257
-	trimbase = 
+	trimbase = b448ae8a2
