--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = a000357d5
+	base = a0f9f53a2
 	trim = ament_cmake_cpplint
-	trimbase = 
+	trimbase = a000357d5
