--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = 33252af35
+	base = 46420e463
 	trim = ament_lint_auto
-	trimbase = 
+	trimbase = 33252af35
