--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = ec7b44061
+	base = 9c2d8a509
 	trim = ament_cmake_lint_cmake
-	trimbase = 
+	trimbase = ec7b44061
