--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = b43a08991
+	base = aa3f9ce1e
 	trim = ament_cmake_copyright
-	trimbase = 
+	trimbase = b43a08991
