--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = b2e2963cb
+	base = 56b2d1e17
 	trim = ament_cpplint
-	trimbase = 
+	trimbase = b2e2963cb
