--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = e1893b684
+	base = 458e6fad0
 	trim = ament_cmake_pclint
-	trimbase = 
+	trimbase = e1893b684
