--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = 1492fd136
+	base = b3857a7f3
 	trim = ament_uncrustify
-	trimbase = 
+	trimbase = 1492fd136
