--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 55d81b8af
-	base = c6912161d
+	base = db248306a
 	trim = ament_cmake_xmllint
-	trimbase = 
+	trimbase = c6912161d
