--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.11.4-2": ["Tue Feb 08 2022", "Michael Jeronimo", "michael.jeronimo@openrobotics.org"]}
+{"0.12.0-1": ["Fri Feb 18 2022", "Michael Jeronimo", "michael.jeronimo@openrobotics.org"], "0.11.4-2": ["Tue Feb 08 2022", "Michael Jeronimo", "michael.jeronimo@openrobotics.org"]}
